--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ jobs:
   test:
     strategy:
       matrix:
-        ruby: [2.5, 2.6, 2.7, '3.0', head]
+        ruby: [2.5, 2.6, 2.7, '3.0', 3.1, head]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
